Clone/src/modules/helper/_helper.scss
.helper{
  &__wrapper {
    position: absolute;
    padding: 30px;
    padding-left: 55px;
    width: 100%;
    height: 100%;
    background-color: rgba(20, 20, 20, 0.2);
  }
  &__body {
    padding: 20px;
    width: 50%;
    height: 100%;
    background: wheat;
    color: black;
    border-radius: 8px;
    filter: drop-shadow(2px 4px 4px rgba(20, 20, 20, 0.4));
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    overflow-x: scroll;
    overflow-y: scroll;
    &::-webkit-scrollbar {
      width: 0;
      height: 0;
      display: none;
      background: transparent;
    }
  }
  &___button {
    position: absolute;
    top: 2%;
    left: 1%;
    width: 50px;
    height: 50px;
    background-color: $color-btn-primary;
    color: black;
    font-size: larger;
    font-weight: 700;
    border-radius: 50%;
    z-index: 1;
    filter: drop-shadow(2px 4px 4px rgba(20, 20, 20, 0.4));
  }
  &__title {
    margin-bottom: 5px;
    margin-top: 10px;
    font-size: 20px;
    font-weight: 500;
    background: rosybrown;
    padding: 4px;
  }
  &__subtitle {
    margin-bottom: 5px;
    margin-top: 10px;
    font-size: 18px;
    background: burlywood;
    padding: 4px;
  }
  &__li{
    margin-left: 20px;
    position: relative;
    &::after {
      position: absolute;
      top: 8px;
      left: -8px;
      content: "";
      width: 3px;
      height: 3px;
      border-radius: 50%;
      background: black;
    }
  }
}

.nobackground {
  background: none;
}

